@@ -3,6 +3,8 @@ Changes for faraday
 ===============================================================================
 
 DONE:
+3/20/08 - simplify setting of DEBUG_DISPLAY_FLUX from Developer menu
+3/20/08 - read -dev command line arg to enable developer controls
 3/20/08 - delete CVS file headers, remove CVS keywords from javadoc, organize imports
 3/20/08 - increase range of loop area control [#425]
 3/20/08 - revert settings if Field Controls dialog is closed via close button in window dressing
